--- a/benchmark/Benchmark.ipynb
+++ b/benchmark/Benchmark.ipynb
@@ -14,6 +14,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Measure Runtime for both options: 'scatter' and 'convert'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -116,12 +123,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get the Average Runtime "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "average_runtime_df = pd.DataFrame(list(average_runtimes.items()), columns=['Task', 'Average Runtime'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualize the Average Runtime in both options (s)"
    ]
   },
   {
@@ -147,6 +168,13 @@
     "plt.ylabel('Average Runtime (seconds)')\n",
     "plt.title('Average Runtime Analysis of quantgene.py Tasks')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get Dataframe of Average Runtime "
    ]
   },
   {
